# work-optimization

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  DEPLOYMENT.md  Dockerfile  Makefile  README.md  admin.bat  container-entrypoint.sh  deploy.sh  dev-setup.sh  hh.bat  pyproject.toml  pytest.ini  run_tests.bat  run_tests_coverage.bat  run_tests_module.bat  run_tests_parallel.bat  setup_tests.bat  tests_menu.bat
.github/workflows/: ci.yml  tests.yml
admin/: app.py  index.html
docs/: AGENT_GUIDE.md  AUTHORIZATION_INIT.md  AUTONOMOUS_AGENT_WORKFLOW.md  DEVOPS.md  DEVOPS_CHEATSHEET.md  GIT_FIRST_COMMIT.md  README.md  READY_TO_RUN.md  SETUP_SUMMARY.md
docs/development/: LINTING.md  LINTING_SETUP.md  TESTING.md  TESTS.md
docs/reports/: IMPLEMENTATION_COMPLETE.md  SETUP_SUMMARY.txt  TEST_REPORT.md
src/hh_applicant_tool/: constants.py  main.py
src/hh_applicant_tool/ai/: openai.py
src/hh_applicant_tool/api/: client.py  errors.py
src/hh_applicant_tool/operations/: _apply_vacancies_apply_flow.py  _apply_vacancies_helpers.py  apply_vacancies.py  apply_vacancies_ai.py  apply_vacancies_helpers.py
src/hh_applicant_tool/storage/: facade.py  utils.py
src/hh_applicant_tool/storage/models/: base.py  resume.py
src/hh_applicant_tool/utils/: config.py  date.py  json.py  log.py  mixins.py  string.py
tests/: conftest.py  test_admin_app.py  test_api_client.py  test_api_client_edge_cases.py  test_api_client_extended.py  test_api_errors.py  test_api_errors_edge_cases.py  test_api_errors_extended.py  test_main.py  test_operations.py  test_storage_models.py  test_storage_models_edge_cases.py  test_storage_repositories.py  test_utils_config.py  test_utils_config_edge_cases.py  test_utils_date.py  test_utils_date_edge_cases.py  test_utils_edge_cases.py  test_utils_json.py  test_utils_string.py
