[tool.poetry]
name = "hh-applicant-tool"
version = "1.8.6"
description = "HH-Applicant-Tool: An automation utility for HeadHunter (hh.ru) designed to streamline the job search process by auto-applying to relevant vacancies and periodically refreshing resumes to stay at the top of recruiter searches."
homepage = "https://github.com/s3rgeym/hh-applicant-tool"
repository = "https://github.com/s3rgeym/hh-applicant-tool"
# Впишите себя, кто причастен к каким-либо изменениям
authors = ["Senior YAML Developer <yamldeveloper@proton.me>"]
readme = "README.md"
packages = [
  { include = "hh_applicant_tool", from = "src" },
]
include = [
  # Содержит схему и миграции
  { path = "src/hh_applicant_tool/**/*.sql", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = {extras = ["socks"], version = "^2.32.3"}
prettytable = "^3.6.0"
# poetry add playwright --optional
playwright = { version = "^1.57.0", optional = true }
# Он не работает или устаревший
# libsixel-python = { version = "^0.5.0", optional = true }
pillow = { version = "^12.1.0", optional = true }

# poetry install --with playwright,pillow
[tool.poetry.extras]
playwright = ["playwright"]
# sixel = ["libsixel-python", "pillow"]
pillow = ["pillow"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.16.4"
pytest = "^7.2.2"
ruff = "^0.14.9"
basedpyright = "^1.36.1"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hh-applicant-tool = "hh_applicant_tool.main:main"

# Он заебал агриться на старый код, который был написан до появления агрессивной
# проверки типов в pyright
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Покрываем проект базовой проверкой типов
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E - pycodestyle (стиль кода)
# F - Pyflakes (ошибки)
# B - flake8-bugbear (баги)
# I - isort (импорты)
# UP - pyupgrade (обновления)
select = ["E", "F", "B", "I", "UP", "C4", "PIE", "RET", "SIM"]

ignore = [
    "E501",  # длина строк (ruff-format справляется)
    "E731",  # разрешаем лямбды
    "B008",  # вызовы функций в дефолтных аргументах (FastAPI)
    "SIM105", # use-ternary-operator
]

[tool.ruff.lint.per-file-ignores]
# Игнорим неиспользуемые импорты только в __init__
"__init__.py" = ["F401", "E402"]
"tests/*.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --disable-warnings"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "edge_cases: Edge case tests",
    "slow: Slow tests",
    "utils: Tests for utils module",
    "api: Tests for API module",
    "storage: Tests for storage module",
]

[tool.coverage.run]
source = ["src/hh_applicant_tool"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
